--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </button>
         </div>
       </section>
-      <section class="section-second">
+      <section class="section section-second">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
@@ -203,7 +203,7 @@
           </ul>
         </div>
       </section>
-      <section class="section what-are-we-doing">
+      <section class="what-are-we-doing">
         <div class="container">
           <h2 class="section-headings">What are we doing</h2>
           <ul class="img-list">
@@ -488,7 +488,7 @@
             </p>
           </div>
           <div class="footer-social-media">
-            <h4 class="social-media">Social media</h4>
+            <p class="social-media">Social media</p>
             <ul class="footer-socials-list">
               <li class="footer-socials-item">
                 <a class="footer-socials-link" href="">
@@ -522,7 +522,7 @@
           </div>
         </div>
         <div class="footer-subscribe">
-          <h4 class="social-media">Subscribe</h4>
+          <p class="social-media">Subscribe</p>
           <form class="form-footer" name="form-footer">
             <input
               class="input-footer"
