--- a/portfolio.html
+++ b/portfolio.html
@@ -23,17 +23,21 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
+        <div class="header-container-desktop">
           <nav class="header-nav">
             <a class="logo" href="./index.html"
               >Web<span class="logo-header">Studio</span></a
             >
             <ul class="header-menu">
-              <li><a class="navigation" href="./index.html">Studio</a></li>
-              <li>
-                <a class="navigation line" href="./portfolio.html">Portfolio</a>
+              <li class="navigation-item">
+                <a class="navigation line" href="./index.html">Studio</a>
               </li>
-              <li><a class="navigation" href="">Contacts</a></li>
+              <li class="navigation-item">
+                <a class="navigation" href="./portfolio.html">Portfolio</a>
+              </li>
+              <li class="navigation-item">
+                <a class="navigation" href="">Contacts</a>
+              </li>
             </ul>
           </nav>
           <address>
@@ -50,6 +54,88 @@
               </li>
             </ul>
           </address>
+        </div>
+        <div class="header-container-mobile">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-header">Studio</span></a
+          >
+          <button class="header-burger js-open-menu" type="button">
+            <svg width="32px" height="22px">
+              <use href="./images/icons.svg#icon-burger-menu"></use>
+            </svg>
+          </button>
+        </div>
+        <div class="mobile-menu js-menu-container">
+          <button class="mobile-menu-close js-close-menu" type="button">
+            <svg class="mobile-close-icon">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu-container">
+            <nav class="mobile-nav">
+              <ul class="mobile-nav-list">
+                <li class="mobile-nav-item">
+                  <a class="mobile-nav-link" href="./index.html">Studio</a>
+                </li>
+                <li class="mobile-nav-item">
+                  <a class="mobile-nav-link" href="./portfolio.html"
+                    >Portfolio</a
+                  >
+                </li>
+                <li class="mobile-nav-item" class="mobile-nav-item">
+                  <a class="mobile-nav-link" href="">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+            <address>
+              <ul class="mobile-contacts-menu">
+                <li>
+                  <a class="mobile-navigation-tel" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="mobile-navigation-mail"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+              </ul>
+            </address>
+            <div class="mobile-social-media">
+              <ul class="mobile-socials-list">
+                <li class="mobile-socials-item">
+                  <a class="mobile-socials-link" href="">
+                    <svg class="mobile-socials-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-socials-item">
+                  <a class="mobile-socials-link" href="">
+                    <svg class="mobile-socials-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-socials-item">
+                  <a class="mobile-socials-link" href="">
+                    <svg class="mobile-socials-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="mobile-socials-item">
+                  <a class="mobile-socials-link" href="">
+                    <svg class="mobile-socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -288,50 +374,52 @@
     </main>
     <footer class="footer-dark-background">
       <div class="container footer-container">
-        <div class="footer-left-container">
-          <a class="logo-web" href="./index.html"
-            >Web<span class="logo-footer">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-social-media">
-          <h4 class="social-media">Social media</h4>
-          <ul class="footer-socials-list">
-            <li class="footer-socials-item">
-              <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials-item">
-              <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials-item">
-              <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-socials-item">
-              <a class="footer-socials-link" href="">
-                <svg class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="logo-social-container">
+          <div class="footer-left-container">
+            <a class="logo-web" href="./index.html"
+              >Web<span class="logo-footer">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-social-media">
+            <p class="social-media">Social media</p>
+            <ul class="footer-socials-list">
+              <li class="footer-socials-item">
+                <a class="footer-socials-link" href="">
+                  <svg class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-link" href="">
+                  <svg class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-link" href="">
+                  <svg class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-socials-item">
+                <a class="footer-socials-link" href="">
+                  <svg class="footer-socials-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="footer-subscribe">
-          <h4 class="social-media">Subscribe</h4>
+          <p class="social-media">Subscribe</p>
           <form class="form-footer" name="form-footer">
             <input
               class="input-footer"
